<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/inicio" />
    
    <item
        android:id="@+id/nav_explorar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/explorar" />
    
    <item
        android:id="@+id/nav_trabajos"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/trabajos" />
    
    <item
        android:id="@+id/nav_mensajes"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/mensajes" />
    
    <item
        android:id="@+id/nav_perfil"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/perfil" />
</menu>
