<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <!-- Título -->
    <TextView
        android:id="@+id/txtMensajeTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mensaje"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/>

    <!-- Barra de búsqueda con icono -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Buscar"
        app:startIconDrawable="@android:drawable/ic_menu_search">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Tabs -->
    <!-- Tabs -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutMensajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/primary"
        app:tabSelectedTextColor="@color/primary">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_todos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_todos" />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_pendiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_pendiente" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_proceso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_proceso" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_terminado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_terminado" />



    </com.google.android.material.tabs.TabLayout>


    <!-- Recycler -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMensajes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
